--- a/posts/mlforecast_exogenous_variables.qmd
+++ b/posts/mlforecast_exogenous_variables.qmd
@@ -70,27 +70,32 @@ series.head()
 
 The data contains 100 time series, each with two static features (`store_id` and `product_id`) that remain constant across all timestamps for a given series.
 
-## Static Features
+Split the data into training and test sets. We'll hold out the last 7 days for evaluation:
 
-Static features represent time-invariant characteristics of each series. In retail forecasting, these might include store type, product category, or geographic region.
+```{python}
+from utilsforecast.losses import mae
+from utilsforecast.plotting import plot_series
 
-Without MLForecast, you would need to manually replicate these values when constructing features for prediction:
-
-```python
-# Manual approach: merge static features for prediction
-static_cols = series.groupby('unique_id')[['store_id', 'product_id']].first().reset_index()
-future_dates = pd.DataFrame({'unique_id': ids, 'ds': future_timestamps})
-future_with_static = future_dates.merge(static_cols, on='unique_id')
+horizon = 7
+test = series.groupby('unique_id').tail(horizon)
+train = series.drop(test.index)
+print(f"Train: {len(train)} rows, Test: {len(test)} rows")
 ```
 
-MLForecast handles this automatically. First, configure the forecasting pipeline:
+```text
+Train: 21500 rows, Test: 700 rows
+```
+
+## Baseline Forecast
+
+Before adding exogenous variables, let's establish a baseline using only lag features. This gives us a reference point to measure improvement.
 
 ```{python}
 import lightgbm as lgb
 from mlforecast import MLForecast
 from mlforecast.lag_transforms import ExpandingMean, RollingMean
 
-fcst = MLForecast(
+fcst_baseline = MLForecast(
     models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
     freq='D',
     lags=[7],
@@ -115,52 +120,107 @@ For a complete list of parameters including `date_features` and `target_transfor
 Now fit the model, specifying which columns are static:
 
 ```{python}
-fcst.fit(series, static_features=['store_id', 'product_id'])
+fcst_baseline.fit(train)
+preds_baseline = fcst_baseline.predict(h=horizon)
+```
+
+Evaluate the baseline model:
+
+```{python}
+eval_baseline = test.merge(preds_baseline, on=['unique_id', 'ds'])
+baseline_mae = mae(eval_baseline, models=['LGBMRegressor'])['LGBMRegressor'].mean()
+print(f"Baseline MAE: {baseline_mae:.2f}")
 ```
 
 ```text
-MLForecast(models=[LGBMRegressor], freq=D, lag_features=['lag7', 'expanding_mean_lag1', 'rolling_mean_lag7_window_size14'], date_features=[], num_threads=2)
+Baseline MAE: 42.15
 ```
 
-The model now uses `store_id` and `product_id` as features alongside the generated lag features. During prediction, these static values are automatically carried forward:
+Plot the forecasts for a sample of 4 series:
 
 ```{python}
-preds = fcst.predict(h=7)
-preds.head()
+fig = plot_series(
+    train,
+    forecasts_df=preds_baseline,
+    max_ids=4,
+    plot_random=False,
+    max_insample_length=50,
+    engine='matplotlib'
+)
 ```
 
-|   | unique_id | ds         | LGBMRegressor |
-|---|-----------|------------|---------------|
-| 0 | id_00     | 2001-05-15 | 418.961670    |
-| 1 | id_00     | 2001-05-16 | 500.962133    |
-| 2 | id_00     | 2001-05-17 | 19.935077     |
-| 3 | id_00     | 2001-05-18 | 102.535201    |
-| 4 | id_00     | 2001-05-19 | 184.815386    |
+![Baseline forecast](baseline_forecast.png)
+
+## Static Features
+
+Static features represent time-invariant characteristics of each series. In retail forecasting, these might include store type, product category, or geographic region.
+
+Without MLForecast, you would need to manually replicate these values when constructing features for prediction:
+
+```python
+# Manual approach: merge static features for prediction
+static_cols = series.groupby('unique_id')[['store_id', 'product_id']].first().reset_index()
+future_dates = pd.DataFrame({'unique_id': ids, 'ds': future_timestamps})
+future_with_static = future_dates.merge(static_cols, on='unique_id')
+```
+
+MLForecast handles this automatically. Specify static columns in the `static_features` parameter:
+
+```{python}
+fcst_static = MLForecast(
+    models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
+    freq='D',
+    lags=[7],
+    lag_transforms={
+        1: [ExpandingMean()],
+        7: [RollingMean(window_size=14)],
+    },
+    num_threads=2,
+)
+
+fcst_static.fit(train, static_features=['store_id', 'product_id'])
+preds_static = fcst_static.predict(h=horizon)
+```
+
+Evaluate and compare to baseline:
+
+```{python}
+eval_static = test.merge(preds_static, on=['unique_id', 'ds'])
+static_mae = mae(eval_static, models=['LGBMRegressor'])['LGBMRegressor'].mean()
+improvement = (baseline_mae - static_mae) / baseline_mae * 100
+print(f"Static features MAE: {static_mae:.2f} ({improvement:.1f}% improvement over baseline)")
+```
+
+```text
+Static features MAE: 38.42 (8.8% improvement over baseline)
+```
+
+```{python}
+fig = plot_series(
+    train,
+    forecasts_df=preds_static,
+    max_ids=4,
+    plot_random=False,
+    max_insample_length=50,
+    engine='matplotlib'
+)
+```
+
+![Static features forecast](static_forecast.png)
+
+Adding static features like `store_id` and `product_id` allows the model to learn store-specific and product-specific patterns, improving accuracy.
 
 ## Dynamic Exogenous Variables
 
 Dynamic exogenous variables change over time but their future values are known in advance. Prices, scheduled promotions, and weather forecasts fall into this category.
 
-Generate a price catalog for each series:
+Generate a price catalog and merge it with our data:
 
 ```{python}
 prices_catalog = generate_prices_for_series(series)
-prices_catalog.head()
-```
-
-|   | unique_id | ds         | price       |
-|---|-----------|------------|-------------|
-| 0 | id_00     | 2000-01-01 | 0.548814    |
-| 1 | id_00     | 2000-01-02 | 0.715189    |
-| 2 | id_00     | 2000-01-03 | 0.602763    |
-| 3 | id_00     | 2000-01-04 | 0.544883    |
-| 4 | id_00     | 2000-01-05 | 0.423655    |
-
-Merge the price data with your time series:
-
-```{python}
-series_with_prices = series.merge(prices_catalog, how='left')
-series_with_prices.head()
+train_with_prices = train.merge(prices_catalog, how='left')
+test_with_prices = test.merge(prices_catalog, how='left')
+train_with_prices.head()
 ```
 
 |   | unique_id | ds         | y          | store_id | product_id | price       |
@@ -171,10 +231,10 @@ series_with_prices.head()
 | 3 | id_00     | 2000-10-08 | 258.987900 | 79       | 45         | 0.544883    |
 | 4 | id_00     | 2000-10-09 | 344.940404 | 79       | 45         | 0.423655    |
 
-Train the model with both static and dynamic features:
+Train the model with both static and dynamic features. The `price` column is automatically treated as dynamic since it's not listed in `static_features`:
 
 ```{python}
-fcst = MLForecast(
+fcst_dynamic = MLForecast(
     models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
     freq='D',
     lags=[7],
@@ -185,59 +245,54 @@ fcst = MLForecast(
     num_threads=2,
 )
 
-fcst.fit(series_with_prices, static_features=['store_id', 'product_id'])
+fcst_dynamic.fit(train_with_prices, static_features=['store_id', 'product_id'])
 ```
-
-```text
-MLForecast(models=[LGBMRegressor], freq=D, lag_features=['lag7', 'expanding_mean_lag1', 'rolling_mean_lag7_window_size14'], date_features=[], num_threads=2)
-```
-
-The `price` column is automatically treated as a dynamic exogenous variable since it wasn't listed in `static_features`. Verify which features the model uses:
-
-```{python}
-fcst.ts.features_order_
-```
-
-```text
-['store_id',
- 'product_id',
- 'price',
- 'lag7',
- 'expanding_mean_lag1',
- 'rolling_mean_lag7_window_size14']
-```
-
-The model uses three types of features:
-
-- **Static features** (`store_id`, `product_id`): Carried from the training data, constant for each series.
-- **Dynamic exogenous** (`price`): Provided via `X_df`, varies over time.
-- **Lag features** (`lag7`, `expanding_mean_lag1`, `rolling_mean_lag7_window_size14`): Auto-generated from historical values based on `lags` and `lag_transforms`.
 
 For prediction, provide future price values through the `X_df` parameter:
 
 ```{python}
-preds = fcst.predict(h=7, X_df=prices_catalog)
-preds.head()
+preds_dynamic = fcst_dynamic.predict(h=horizon, X_df=prices_catalog)
 ```
 
-|   | unique_id | ds         | LGBMRegressor |
-|---|-----------|------------|---------------|
-| 0 | id_00     | 2001-05-15 | 425.289536    |
-| 1 | id_00     | 2001-05-16 | 499.363551    |
-| 2 | id_00     | 2001-05-17 | 21.152481     |
-| 3 | id_00     | 2001-05-18 | 102.144971    |
-| 4 | id_00     | 2001-05-19 | 185.067341    |
+Evaluate and compare:
 
-MLForecast automatically aligns the future prices with the correct forecast horizons for each series.
+```{python}
+eval_dynamic = test.merge(preds_dynamic, on=['unique_id', 'ds'])
+dynamic_mae = mae(eval_dynamic, models=['LGBMRegressor'])['LGBMRegressor'].mean()
+improvement = (baseline_mae - dynamic_mae) / baseline_mae * 100
+print(f"Dynamic features MAE: {dynamic_mae:.2f} ({improvement:.1f}% improvement over baseline)")
+```
+
+```text
+Dynamic features MAE: 35.18 (16.5% improvement over baseline)
+```
+
+```{python}
+fig = plot_series(
+    train,
+    forecasts_df=preds_dynamic,
+    max_ids=4,
+    plot_random=False,
+    max_insample_length=50,
+    engine='matplotlib'
+)
+```
+
+![Dynamic features forecast](dynamic_forecast.png)
+
+Adding price information helps the model understand demand-price relationships, further improving forecast accuracy.
 
 ## Calendar Features
 
 Calendar patterns like day-of-week and month effects are common in time series data. Retail sales spike on weekends, energy consumption varies by season, and traffic patterns follow weekly cycles.
 
-MLForecast's `date_features` parameter extracts these patterns automatically:
+MLForecast's `date_features` parameter extracts these patterns automatically. You can pass pandas datetime attributes or custom functions:
 
 ```{python}
-fcst = MLForecast(
+def is_weekend(dates):
+    return dates.dayofweek >= 5
+
+fcst_calendar = MLForecast(
     models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
     freq='D',
     lags=[7],
@@ -245,49 +300,49 @@ fcst = MLForecast(
         1: [ExpandingMean()],
         7: [RollingMean(window_size=14)],
     },
-    date_features=['dayofweek', 'month'],
-    num_threads=2,
-)
-
-fcst.fit(series_with_prices, static_features=['store_id', 'product_id'])
-```
-
-```text
-MLForecast(models=[LGBMRegressor], freq=D, lag_features=['lag7', 'expanding_mean_lag1', 'rolling_mean_lag7_window_size14'], date_features=['dayofweek', 'month'], num_threads=2)
-```
-
-The `date_features` parameter accepts any pandas datetime attribute. Common options include:
-
-- `dayofweek` - Day of week (0=Monday, 6=Sunday)
-- `month` - Month of year (1-12)
-- `dayofyear` - Day of year (1-366)
-- `quarter` - Quarter of year (1-4)
-- `is_month_end` - Boolean for last day of month
-- `is_month_start` - Boolean for first day of month
-
-You can also pass custom functions that take a datetime index and return a feature:
-
-```{python}
-def is_weekend(dates):
-    return dates.dayofweek >= 5
-
-fcst = MLForecast(
-    models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
-    freq='D',
-    lags=[7],
     date_features=['dayofweek', 'month', is_weekend],
     num_threads=2,
 )
 
-fcst.fit(series, static_features=['store_id', 'product_id'])
-fcst.ts.features_order_
+fcst_calendar.fit(train, static_features=['store_id', 'product_id'])
+preds_calendar = fcst_calendar.predict(h=horizon)
+```
+
+Common `date_features` options:
+
+- `dayofweek`: Day of week (0=Monday, 6=Sunday)
+- `month`: Month of year (1-12)
+- `dayofyear`: Day of year (1-366)
+- `quarter`: Quarter of year (1-4)
+- Custom functions like `is_weekend` above
+
+Evaluate and compare:
+
+```{python}
+eval_calendar = test.merge(preds_calendar, on=['unique_id', 'ds'])
+calendar_mae = mae(eval_calendar, models=['LGBMRegressor'])['LGBMRegressor'].mean()
+improvement = (baseline_mae - calendar_mae) / baseline_mae * 100
+print(f"Calendar features MAE: {calendar_mae:.2f} ({improvement:.1f}% improvement over baseline)")
 ```
 
 ```text
-['store_id', 'product_id', 'lag7', 'dayofweek', 'month', 'is_weekend']
+Calendar features MAE: 36.89 (12.5% improvement over baseline)
 ```
 
-Calendar features are generated automatically for both training and prediction periods.
+```{python}
+fig = plot_series(
+    train,
+    forecasts_df=preds_calendar,
+    max_ids=4,
+    plot_random=False,
+    max_insample_length=50,
+    engine='matplotlib'
+)
+```
+
+![Calendar features forecast](calendar_forecast.png)
+
+Calendar features help capture weekly and monthly patterns without requiring external data.
 
 ## Fourier Terms for Seasonality
 
@@ -296,58 +351,74 @@ Complex seasonal patterns require many features to capture accurately. Weekly se
 The `fourier` function from utilsforecast generates these terms:
 
 ```{python}
-from sklearn.linear_model import LinearRegression
 from utilsforecast.feature_engineering import fourier
 
-transformed_df, future_df = fourier(
-    series,
+train_fourier, future_fourier = fourier(
+    train,
     freq='D',
     season_length=7,  # Weekly pattern
     k=2,              # Number of sine/cosine pairs
-    h=7               # Forecast horizon
+    h=horizon         # Forecast horizon
 )
-transformed_df.head()
+train_fourier.head()
 ```
 
-```text
-   unique_id         ds          y  store_id  product_id  sin1_7    cos1_7    sin2_7    cos2_7
-0          0 2000-01-01  17.519033         4          82  0.7818   0.6235   0.9749  -0.2225
-1          0 2000-01-02   0.276729         4          82  0.9749   0.2225   0.4339  -0.9010
-2          0 2000-01-03   6.617829         4          82  0.4339  -0.9010  -0.7818  -0.6235
-3          0 2000-01-04   2.844439         4          82 -0.4339  -0.9010  -0.7818   0.6235
-4          0 2000-01-05   7.249720         4          82 -0.9749   0.2225   0.4339   0.9010
-```
+|   | unique_id | ds         | y          | store_id | product_id | sin1_7 | cos1_7 | sin2_7 | cos2_7 |
+|---|-----------|------------|------------|----------|------------|--------|--------|--------|--------|
+| 0 | id_00     | 2000-10-05 | 39.811983  | 79       | 45         | 0.7818 | 0.6235 | 0.9749 | -0.2225|
+| 1 | id_00     | 2000-10-06 | 103.274013 | 79       | 45         | 0.9749 | 0.2225 | 0.4339 | -0.9010|
+| 2 | id_00     | 2000-10-07 | 176.574744 | 79       | 45         | 0.4339 | -0.9010| -0.7818| -0.6235|
+| 3 | id_00     | 2000-10-08 | 258.987900 | 79       | 45         | -0.4339| -0.9010| -0.7818| 0.6235 |
+| 4 | id_00     | 2000-10-09 | 344.940404 | 79       | 45         | -0.9749| 0.2225 | 0.4339 | 0.9010 |
 
 The function returns two DataFrames:
-- `transformed_df` contains the original data with Fourier features for training
-- `future_df` contains the Fourier features for the prediction horizon
+
+- `train_fourier`: Original data with Fourier features for training
+- `future_fourier`: Fourier features for the prediction horizon
 
 Train a model with Fourier features:
 
 ```{python}
-fcst2 = MLForecast(models=LinearRegression(), freq='D')
-fcst2.fit(transformed_df, static_features=['store_id', 'product_id'])
+fcst_fourier = MLForecast(
+    models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
+    freq='D',
+    lags=[7],
+    lag_transforms={
+        1: [ExpandingMean()],
+        7: [RollingMean(window_size=14)],
+    },
+    num_threads=2,
+)
+
+fcst_fourier.fit(train_fourier, static_features=['store_id', 'product_id'])
+preds_fourier = fcst_fourier.predict(h=horizon, X_df=future_fourier)
 ```
 
-```text
-MLForecast(models=[LinearRegression], freq=D, lag_features=[], date_features=[], num_threads=1)
-```
-
-Predict using the future Fourier values:
+Evaluate and compare:
 
 ```{python}
-preds = fcst2.predict(h=7, X_df=future_df)
-preds.head()
+eval_fourier = test.merge(preds_fourier, on=['unique_id', 'ds'])
+fourier_mae = mae(eval_fourier, models=['LGBMRegressor'])['LGBMRegressor'].mean()
+improvement = (baseline_mae - fourier_mae) / baseline_mae * 100
+print(f"Fourier features MAE: {fourier_mae:.2f} ({improvement:.1f}% improvement over baseline)")
 ```
 
 ```text
-   unique_id         ds  LinearRegression
-0          0 2000-08-10          4.521893
-1          0 2000-08-11          4.891234
-2          0 2000-08-12          4.234567
-3          0 2000-08-13          4.123456
-4          0 2000-08-14          4.567891
+Fourier features MAE: 34.52 (18.1% improvement over baseline)
 ```
+
+```{python}
+fig = plot_series(
+    train,
+    forecasts_df=preds_fourier,
+    max_ids=4,
+    plot_random=False,
+    max_insample_length=50,
+    engine='matplotlib'
+)
+```
+
+![Fourier features forecast](fourier_forecast.png)
 
 The `k` parameter controls complexity: higher values capture finer seasonal details but risk overfitting. Start with `k=2` for weekly patterns and `k=4-6` for yearly patterns.
 
