--- a/posts/mlforecast_exogenous_variables.qmd
+++ b/posts/mlforecast_exogenous_variables.qmd
@@ -51,23 +51,25 @@ pip install mlforecast lightgbm utilsforecast
 
 We'll use a subset of the [Kaggle Store Sales](https://www.kaggle.com/competitions/store-sales-time-series-forecasting) dataset. This dataset contains daily sales data from Corporación Favorita, a large Ecuadorian grocery retailer, with rich exogenous variables including store metadata, promotions, oil prices, and holidays.
 
+The subset contains 5 stores and 3 product families (GROCERY I, BEVERAGES, PRODUCE) from 2016-2017, merged with store metadata, oil prices, and holiday information.
+
 ```{python}
 import pandas as pd
 
-series = pd.read_csv(
-    'examples/mlforecast_exogenous/store_sales_subset.csv',
-    parse_dates=['ds']
-)
+# DATA_URL = 'https://raw.githubusercontent.com/Nixtla/nixtla_blog/main/posts/data/mlforecast_exogenous/store_sales_subset.csv'
+DATA_URL = 'data/mlforecast_exogenous/store_sales_subset.csv'
+series = pd.read_csv(DATA_URL, parse_dates=['ds'])
 series.head()
 ```
 
-|   | unique_id    | ds         | y      | store_nbr | family    | city  | state     | type | cluster | onpromotion | oil_price | is_holiday |
-|---|--------------|------------|--------|-----------|-----------|-------|-----------|------|---------|-------------|-----------|------------|
-| 0 | 1_BEVERAGES  | 2016-01-01 | 0.0    | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 0           | 37.13     | 1          |
-| 1 | 1_BEVERAGES  | 2016-01-02 | 1856.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 7           | NaN       | 0          |
-| 2 | 1_BEVERAGES  | 2016-01-03 | 1048.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 1           | NaN       | 0          |
-| 3 | 1_BEVERAGES  | 2016-01-04 | 3005.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 3           | 36.81     | 0          |
-| 4 | 1_BEVERAGES  | 2016-01-05 | 2679.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 3           | 36.08     | 0          |
+|   | unique_id   | ds         | y      | store_nbr | family    | city  | state     | type | cluster | onpromotion | oil_price | is_holiday |
+|---|-------------|------------|--------|-----------|-----------|-------|-----------|------|---------|-------------|-----------|------------|
+| 0 | 1_BEVERAGES | 2016-01-01 | 0.0    | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 0           | 37.13     | 1          |
+| 1 | 1_BEVERAGES | 2016-01-02 | 1856.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 7           | NaN       | 0          |
+| 2 | 1_BEVERAGES | 2016-01-03 | 1048.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 1           | NaN       | 0          |
+| 3 | 1_BEVERAGES | 2016-01-04 | 3005.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 3           | 36.81     | 0          |
+| 4 | 1_BEVERAGES | 2016-01-05 | 2374.0 | 1         | BEVERAGES | Quito | Pichincha | D    | 13      | 9           | 35.97     | 0          |
+
 
 The dataset contains 15 time series (5 stores × 3 product families) with:
 
@@ -180,7 +182,11 @@ static_cols = ['store_nbr', 'family', 'city', 'state', 'type', 'cluster']
 
 # Select only static features (exclude dynamic columns for now)
 train_static = train[['unique_id', 'ds', 'y'] + static_cols]
+```
 
+Now train the model with static features:
+
+```{python}
 fcst_static = MLForecast(
     models=lgb.LGBMRegressor(n_jobs=1, random_state=0, verbosity=-1),
     freq='D',
@@ -205,16 +211,11 @@ improvement = (baseline_mae - static_mae) / baseline_mae * 100
 print(f"Static features MAE: {static_mae:.2f} ({improvement:.1f}% improvement over baseline)")
 ```
 
-```{python}
-plot_series(
-    train,
-    forecasts_df=preds_static,
-    max_ids=4,
-    plot_random=False,
-    max_insample_length=50,
-    engine='matplotlib'
-)
+```text
+Static features MAE: 615.56 (-0.2% improvement over baseline)
 ```
+
+Static features alone don't improve accuracy here since the baseline already captures series-specific patterns through lag features. The value of static features becomes apparent when combined with other exogenous variables.
 
 ## Dynamic Exogenous Variables
 
