docs: rename exogenous article files to use hyphens

--- a/examples/notebooks/mlforecast-exogenous-variables.ipynb
+++ b/examples/notebooks/mlforecast-exogenous-variables.ipynb
@@ -478,14 +478,94 @@
    "source": [
     "The forecasts now capture the weekly rhythm visible in the training data. Day-of-week features let the model distinguish high-traffic days from slower ones."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Importance with SHAP\n",
+    "\n",
+    "Understanding which features drive your forecasts helps validate model behavior and guide feature engineering. SHAP (SHapley Additive exPlanations) values show how each feature contributes to predictions across your dataset.\n",
+    "\n",
+    "First, extract the preprocessed features used during training:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep = fcst_calendar.preprocess(train_static)\n",
+    "X = prep.drop(columns=['unique_id', 'ds', 'y'])\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute SHAP values using TreeExplainer, which is optimized for tree-based models like LightGBM:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap\n",
+    "\n",
+    "explainer = shap.TreeExplainer(fcst_calendar.models_['LGBMRegressor'])\n",
+    "shap_values = explainer(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize feature importance with a bar plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.plots.bar(shap_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results validate our earlier findings:\n",
+    "\n",
+    "- `lag1` confirms yesterday's sales as the strongest predictor\n",
+    "- `dayofweek` provides the most value among calendar features—consistent with the 44.5% accuracy improvement\n",
+    "- Static features `city`, `state`, and `type` have zero impact, explaining why they didn't improve the baseline\n",
+    "- `is_weekend` adds nothing despite `dayofweek` being important—the model already captures this pattern"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3",
-   "path": "/Users/khuyentran/nixtla_blog/.venv/share/jupyter/kernels/python3"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
