fix: update DATA_URL for mlforecast notebook

--- a/examples/notebooks/mlforecast-exogenous-variables.ipynb
+++ b/examples/notebooks/mlforecast-exogenous-variables.ipynb
@@ -25,8 +25,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# DATA_URL = 'https://raw.githubusercontent.com/Nixtla/nixtla_blog/main/examples/data/mlforecast_exogenous/store_sales_subset.csv'\n",
-    "DATA_URL = '../data/mlforecast_exogenous/store_sales_subset.csv'\n",
+    "DATA_URL = 'https://raw.githubusercontent.com/Nixtla/blog/refs/heads/main/examples/data/mlforecast_exogenous/store_sales_subset.csv'\n",
     "series = pd.read_csv(DATA_URL, parse_dates=['ds'])\n",
     "series.head()"
    ]
